--- a/index.html
+++ b/index.html
@@ -1,138 +1,87 @@
 <!DOCTYPE html>
-<html>
-	<body>
-	<head>
-		<title>Sai Vardhini</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/style.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sai Vardhini Portfolio - Full Stack Developer with expertise in Java, Spring Boot, ReactJS, and Web Development.">
+    <title>Sai Vardhini Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <div class="main-panel">
+        <div class="container">
+            <div class="width-33 logo">Sai <span class="span-col">Vardhini</span></div>
+            <nav>
+                <a href="#about">About</a>
+                <a href="#skills">Skills</a>
+                <a href="#experience">Experience</a>
+                <a href="#services">Services</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
 
-<div class="main-panel">
-	<div class="container">
-	<div class="width-33 logo">Portfolio</span>
-	</div>
-	<div class="width-66">
-		<nav>
-			<a href="#">
-				<span class="span-col">Home</span>
-			</a>
-			<a href="#">About me</a>
-			<a href="#">Education</a>
-			<a href="#">My Services</a>
-			<a href="#">Portfolio</a>
-		</nav>
-	</div>
-	</div>
-	<div class="container ">
-		<div class="width-50">
-			<div class="banner-section">
-				<span class="span-col">Welcome To My Portfolio</span>
-				<h1>Sai <span class="span-col">Vardhini</span></h1>
-				<h2>- I'm a passionate Developer.</h2>
-				<a href="#">
-					<i class="fa fa-linkedin"></i>
-				</a>
-				<a href="#">
-					<i class="fa fa-instagram"></i>
-				</a>
-				<a href="#">
-					<i class="fa fa-github"></i>
-				</a>
-			</div>
-		</div>
-		<div class="width-50">
-			<img src="images/about-us.jpeg">
-		</div>
-	</div>
-</div>
-<!------ABOUT ME------>
-<div class="main-section bg-black">
-	<div class="container">
-		<div class="width-50">
-			<img src="images/about-us1.jpeg" class="about-img">
-		</div>
+        <div class="container banner-section">
+            
 			<div class="width-50">
-				<div class="about-us">
-					<h2 class="heading-text">About ME</h2>
-					<h3>I am ready to Develop</h3>
-					<p>Hi, I am SaiVardhini, From India. Working on Freelance.</p>
-					<div class="width-50 mt-20">
-						<table cellspacing="8" cellpadding="8">
-							<tr>
-								<th>Name:</th>
-								<td>Sai Vardhini</td>
-							</tr>
-							<tr>
-								<th>Email:</th>
-								<td> saivardhini786@gmail.com</td>
-							</tr>
-							<tr>
-								<th>Birthday:</th>
-								<td> 11 March, 1997</td>
-							</tr>
-							<tr>
-								<th>Study:</th>
-								<td> RGUKT(IIITAP)</td>
-							</tr>
-						</table>
-					</div>
-					<div class="width-55 mt-20">
-						<table cellspacing="8" cellpadding="8">
-							<tr>
-								<th>Phone:</th>
-								<td>(+91) 8639-763-086</td>
-							</tr>
-							<tr>
-								<th>City:</th>
-								<td>Hyderabad, India</td>
-							</tr>
-							<tr>
-								<th>Freelancer:</th>
-								<td> Available</td>
-							</tr>
-							<tr>
-								<th>Website:</th>
-								<!--<td> https://github.com/VardhiniPS/td>-->
-								<td><a href="https://github.com/VardhiniPS">https://github.com/VardhiniPS</a></td>
-							</tr>
-						</table>
-					</div>
-				</div>
-			</div>
-	</div>
-</div>
+                <h1>Hello, I'm Sai Vardhini</h1>
+                <h2>Java Developer | React Developer</h2>
+                <a href="#contact"><i class="fa fa-envelope"></i></a>
+				<a href="https://www.linkedin.com/in/sai-vardhini-pantla-516010139" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+				<a href="https://github.com/VardhiniPS" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+            </div>
+        </div>
+    </div>
+<!------ABOUT ME------>
+    <div class="main-section" id="about">
+        <div class="container abou-wrapper">
+            <h2 class="heading-text">About Me</h2>
+            <div class="about-me">
+				<p>
+					I am a passionate <b>Java fullstack developer</b> with over 2+ years of experience in building robust applications using Java, Spring Boot, JPA, and RESTful APIs. I also have a strong interest in frontend development and have worked on creating dynamic and responsive user interfaces using HTML, CSS, JavaScript, and ReactJS. My expertise includes developing web applications, optimizing code for performance, and collaborating with cross-functional teams to deliver scalable software solutions.<br>
+					I believe in continuous learning and enjoy exploring new technologies to improve my coding skills and build user-centric web applications.<br>
+					I am detail-oriented, a strong team player, and always eager to take on new challenges in the world of software development.
+				</p>
+                <table>
+                    <tr><th>Experience:</th><td>2+ Years</td></tr>
+                    <tr><th>Email:</th><td>saivardhini786@gmail.com</td></tr>
+                    <tr><th>Location:</th><td>Hyderabad, Telangana , India</td></tr>
+                </table>
+            </div>
+        </div>
+    </div>
 <!------SKILL SECTION------>
-<div class="main-section">
-	<div class="container">
-		<h2 class="heading-text">My Skills</h2>
-		<div class="width-50">
+    <div class="main-section bg-lightgrey" id="skills">
+        <div class="container">
+            <h2 class="heading-text">My Skills</h2>
+			<div class="width-50">
 			<div class="skill">
 				<b>HTML</b>
 				<span>INTERMEDIATE</span>
 				<div>
-					<span style="width:50%"/>
+					<span style="width:50%"></span>
 				</div>
 			</div>
 			<div class="skill">
 				<b>CSS</b>
-				<span>MODERATE</span>
+				<span>INTERMEDIATE</span>
 				<div>
-					<span style="width:50%"/>
+					<span style="width:50%"></span>
 				</div>
 			</div>
 			<div class="skill">
 				<b>JavaScript</b>
-				<span>MODERATE</span>
+				<span>INTERMEDIATE</span>
 				<div>
-					<span style="width:50%"/>
+					<span style="width:50%"></span>
 				</div>
 			</div>
 			<div class="skill">
 				<b>React js</b>
 				<span>INTERMEDIATE</span>
 				<div>
-					<span style="width:50%"/>
+					<span style="width:50%"></span>
 				</div>
 			</div>
 		</div>
@@ -150,13 +99,12 @@
 				<div role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="--value:50">SQL</div>
 			</div>
 		</div>
-	</div>
-</div>
-
+        </div>
+    </div>
 <!------EXPERIENCE SECTION------>
-<div class="main-section bg-lightgrey">
-	<div class="container">
-		<div class="edu-exp">
+    <div class="main-section" id="experience">
+        <div class="container">
+			<div class="edu-exp">
 			<h2 class="heading-text">Education</h2>
 			<div class="experience-list">
 				<div class="experience-content">
@@ -166,105 +114,80 @@
 				</div>
 			</div>
 		</div>
-		<div class="edu-exp">
-			<h2 class="heading-text">Experience</h2>
-			<div class="experience-list">
-				<div class="experience-content">
-					<h2>IDC Technologies(TCS Client)</h2>
-					<h3>2022-2024</h3>
-					<p>Software Developer</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+            <h2 class="heading-text">Experience</h2>
+            <div class="edu-exp">
+                <div class="experience-list">
+                    <div class="experience-content">
+                        <h2>TCS (IDC Payroll)</h2>
+                        <h3>Java Developer</h3>
+                        <p>Worked on Java code migration, Spring Boot upgrade, and JUnit testing.</p>
+                    </div>
+                </div>
+            </div>
+			<div class="edu-exp">
+                <div class="experience-list">
+                    <div class="experience-content">
+                        <h2>Freelance</h2>
+                        <h3>Frontend Developer</h3>
+                        <p>Worked on developing responsive website for a pre-school, using HTML,CSS and ReactJS.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 <!------SERVICE SECTION------>
-<div class="main-section">
-	<div class="container">
-		<h2 class="heading-text">My Service</h2>
-		<div class="width-50">
+    <div class="main-section bg-lightgrey" id="services">
+        <div class="container">
+			<h2 class="heading-text">My Services</h2>
+			<h2>Web Development</h2>
+			<div class="width-50">
 			<div class="service-list">
-				<i class="fa fa-chrome"></i>
-				<h3>Web Development</h3>
-				<p>Preschool website</p>
+				<i class="fa fa-github"></i>
+				<h3>pre-school website</h3>
+				<p>I build responsive websites using HTML, CSS, JavaScript and ReactJS</p>
+				<a href="https://github.com/VardhiniPS/school-website" target="_blank">View Project</a>
 			</div>
 		</div>
 		<div class="width-50">
 			<div class="service-list">
 				<i class="fa fa-github"></i>
-				<h3>Web Developing</h3>
-				<p>Self Portfolio</p>
+				<h3>Self Portfolio</h3>
+				<p>A responsive protfolio website developed with HTML, CSS to highlight my skills and projects</p>
+				<a href="https://github.com/VardhiniPS/Portfolio" target="_blank">View Portfolio</a>
+			</div>
+		</div>
+		<div class="width-50">
+			<div class="gallery">
+				<img src="images/gallery-1.JPG"> 
+				<img src="images/gallery-2.JPG" >
+				<img src="images/gallery-3.JPG" >
+				<img src="images/gallery-4.JPG" >
+				<img src="images/gallery-5.JPG">
+				<img src="images/gallery-6.JPG">
 			</div>
 		</div>
 	</div>
 </div>
-<!------PORTFOLIO SECTION------>
-<div class="main-section">
-	<div class="container">
-		<h2 class="heading-text">My Portfolio</h2>
-		<div class="gallery">
-				<img src="images/gallery-1.jpg">
-				<img src="images/gallery-2.jpg">
-      			<img src="images/gallery-3.jpg">
-      			<img src="images/gallery-4.jpg">
-				<img src="images/gallery-5.jpg">
-    			<img src="images/gallery-6.jpg">
-		</div>
-	</div>
-</div>
-
 <!-------------CONTACT US SECTION----------------------->
-<div class="main-section contact bg-lightgrey">
-	<div class="container">
-		<h2 class="heading-text">Get In Touch</h2>
-		<div class="width-100">
-			<form>
-				<input type="text" placeholder="Full Name...">
-				<input type="text" placeholder="Full Email Id...">
-				<input type="text" placeholder="Full Mobile No...">
-				<textarea placeholder="Enter Address..."></textarea>
-				<button type="submit">Submit</button>
-			</form>
-		</div>
-		<div class="width-33">
-			<h3>
-				<i class="fa fa-map-marker"></i>
-			</h3>
-			<h4>Address</h4>
-			<p>Hyderabad,Andhra Pradesh,India</p>
-			</div>
-		<div class="width-33">
-			<h3>
-			<i class="fa fa-phone"></i>
-			</h3>
-			<h4>Phone</h4>
-			<p>+91 86 39 763 086</p>
-		</div>
-		<div class="width-33">
-			<h3>
-				<i class="fa fa-envelope-o"></i>
-			</h3>
-			<h4>Email</h4>
-			<p>saivardhini786@gmail.com</p>
-		</div>
-	</div>
-</div>
-<!------FOOTER SECTION------>
-<div class="footer">
-	<div class="container">
-		<div class="footer-sect social-icon width-50">
-			<a href="#">
-				<i class="fa fa-github"></i>
-			</a>
-			<a href="#">
-				<i class="fa fa-linkedin"></i>
-			</a>
-			<a href="#">
-				<i class="fa fa-instagram"></i>
-			</a>
-		</div>
-		<div class="footer-sect mt-20 width-50">CopyRight © 2025 SaiVardhini. All Rights Reserved</div>
-	</div>
-</div>
-</head>
-<body>
+    <div class="main-section contact" id="contact">
+        <div class="container">
+            <h3>Get in Touch</h3>
+			<br>
+            <p>Feel free to reach out for collaboration or just a friendly hello!</p>
+			<br>
+            <form action="mailto:saivardhini786@gmail.com" method="post" enctype="text/plain">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message"></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container footer-sect">
+            <p>&copy; 2025 Sai Vardhini. All rights reserved.</p>
+        </div>
+    </div>
+</body>
+</html>
